Closed
Bug 236003
Opened 22 years ago
Closed 20 years ago
null check missing (seamonkey version of bug 235129)
Categories
(SeaMonkey :: Bookmarks & History, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
seamonkey1.0alpha
People
(Reporter: basic, Assigned: csthomas)
References
Details
Attachments
(2 files, 1 obsolete file)
|
1.39 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
|
1.03 KB,
patch
|
timeless
:
review+
dbaron
:
superreview+
asa
:
approval1.8b2+
shaver
:
approval1.8b3+
|
Details | Diff | Splinter Review |
patch coming up
just got confirmation from aku on irc that this still crash on recent seamonkey
trunk. upping severity.
Severity: normal → critical
Attachment #142577 -
Flags: superreview?(brendan)
Comment 3•22 years ago
|
||
Comment on attachment 142577 [details] [diff] [review]
patch
Passing buck to darin to make sure this intended. Maybe neil can stamp r=?
/be
Attachment #142577 -
Flags: superreview?(darin)
Attachment #142577 -
Flags: superreview?(brendan)
Attachment #142577 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 4•22 years ago
|
||
Comment on attachment 142577 [details] [diff] [review]
patch
Couldn't we initialize (line 4809) format to something non-null ("")?
Comment 5•22 years ago
|
||
The safest thing to do is to patch nsTSubstring::Equals(char * ... ) to support
a NULL valued in-param. That might be a good plan for 1.7 final since we don't
really want to take any chances, and it's very difficult to be sure that this is
the only offender.
This patch (or the one Neil is suggesting) seems like a good idea either way.
I think if we add the NULL check to Equals, then we'd want to try removing it
during the next Alpha cycle (especially when talkback is reporting!) ;-)
Comment 6•22 years ago
|
||
Updated•22 years ago
|
Attachment #143347 -
Flags: review?(dbaron)
Comment on attachment 143347 [details] [diff] [review]
patch for nsTSubstring::Equals (checked in)
r=dbaron if you add an assertion or an NS_NOTREACHED so we at least assert in
this case.
Attachment #143347 -
Flags: review?(dbaron) → review+
Comment 8•22 years ago
|
||
attachment 143347 [details] [diff] [review] "nsTSubstring::Equals patch" has been checked in on the trunk.
Comment 9•22 years ago
|
||
*** Bug 236274 has been marked as a duplicate of this bug. ***
Comment 10•22 years ago
|
||
Comment on attachment 142577 [details] [diff] [review]
patch
sr=me for this patch or the one Neil suggested.
Attachment #142577 -
Flags: superreview?(darin) → superreview+
Comment 11•21 years ago
|
||
Bug 241987 may be related to this one.
Updated•21 years ago
|
Product: Browser → Seamonkey
| Assignee | ||
Updated•20 years ago
|
Attachment #142577 -
Attachment is obsolete: true
Attachment #142577 -
Flags: review?(neil.parkwaycc.co.uk)
| Assignee | ||
Updated•20 years ago
|
Attachment #143347 -
Attachment description: patch for nsTSubstring::Equals → patch for nsTSubstring::Equals (checked in)
| Assignee | ||
Updated•20 years ago
|
Assignee: p_ch → cst
| Assignee | ||
Comment 12•20 years ago
|
||
Don't let it start out null; the code before the if() from the previous patch
can't make it become null; a null check is no longer needed.
Attachment #180096 -
Flags: superreview?(dbaron)
Attachment #180096 -
Flags: review?(timeless)
Attachment #180096 -
Flags: superreview?(dbaron) → superreview+
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [cst: r?]
Attachment #180096 -
Flags: review?(timeless) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #180096 -
Flags: approval1.8b2?
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [cst: r?] → [cst: a?]
Comment 13•20 years ago
|
||
Comment on attachment 180096 [details] [diff] [review]
patch
a=asa
Attachment #180096 -
Flags: approval1.8b2? → approval1.8b2+
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [cst: a?] → [cst: checkin]
| Assignee | ||
Updated•20 years ago
|
Attachment #180096 -
Flags: approval1.8b3?
Comment 14•20 years ago
|
||
Comment on attachment 180096 [details] [diff] [review]
patch
a=shaver
Attachment #180096 -
Flags: approval1.8b3? → approval1.8b3+
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [cst: checkin]
Target Milestone: --- → Seamonkey1.0alpha
You need to log in
before you can comment on or make changes to this bug.
Description
•