adding null checks for bug 236003 "nsTSubstring::Equals(char *) crashes if passed a NULL pointer" r=dbaron